# Mobile-Camera-IMU

./: .gitignore  README.md  export_presets.cfg  icon.svg.import  project.godot  pyproject.toml
addons/NativeCameraPlugin/: NativeCamera.gd  NativeCameraPlugin.gd
addons/NativeCameraPlugin/model/: CameraInfo.gd  CameraInfo.gd.uid  FeedRequest.gd.uid  FrameInfo.gd.uid  FrameSize.gd.uid
desktop/: README.md  dds_subscriber_debug.py  dds_types.py  dds_viser_viewer.py  pyproject.toml  receiver_viser.py  ws_cyclonedds_bridge.py  ws_viser_server.py
godot/: export_presets.cfg  project.godot
godot/addons/GMPShared/: FrameInfo.gd.uid  FrameSize.gd.uid  GmpLogger.gd  GmpLogger.gd.uid  SpmDependency.gd.uid
godot/addons/NativeCameraPlugin/: NativeCamera.gd  NativeCamera.gd.uid  NativeCameraPlugin.gd  NativeCameraPlugin.gd.uid  icon.png.import  plugin.cfg
godot/addons/NativeCameraPlugin/model/: CameraInfo.gd  CameraInfo.gd.uid  FeedRequest.gd.uid
godot/scenes/: Main.tscn
godot/scripts/: CameraStreamer.gd  CameraStreamer.gd.uid  Main.gd  Main.gd.uid  ZmqPublisher.gd
reports/: zmq_vs_websocket.html
scenes/: Main.tscn
scripts/: CameraStreamer.gd  ComplementaryImu.gd  ComplementaryImu.gd.uid  Main.gd  WebSocketPublisher.gd  WebSocketPublisher.gd.uid  ZmqPublisher.gd.uid
