[project]
name = "mobile-zmq"
version = "0.3.0"
description = "Receive Godot Android WebSocket sensor packets and visualize them with Viser."
readme = "../README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "cyclonedds>=0.10",
    "numpy>=1.26",
    "pyzmq>=26.0",
    "viser>=1.0",
    "websockets>=16.0",
]

[tool.uv]
package = false
